<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ImageView

    android:id="@+id/img_logo"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    />
    <TextView
        android:id="@+id/txtheading"
        android:layout_margin="10dp"
        android:layout_below="@id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_access_all_feature_of_this_app_you_need_to_login_first"
        android:textColor="#000"
        android:textAlignment="center"
        />
  <EditText
      android:id="@+id/username"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/txtheading"
      android:hint="@string/username"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"
      android:background="@drawable/cornerradius"
      android:padding="8dp"
      android:textAlignment="center"
      />
    <EditText
      android:id="@+id/password"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/username"
      android:hint="@string/password"
      android:layout_marginTop="10dp"
      android:layout_centerHorizontal="true"
      android:background="@drawable/cornerradius"
      android:padding="8dp"
      android:textAlignment="center"
        android:inputType="textPassword"
      />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_marginTop="16dp"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/changeuser"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_username"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"
          android:layout_marginTop="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line2"
        android:layout_marginTop="-30dp"
        android:layout_below="@id/line1"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="80dp"
            android:src="@drawable/lock"
            />
        <TextView
            android:layout_marginStart="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"
          android:layout_marginTop="32dp"
            />
    </LinearLayout>
    <Button
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/line2"
        android:layout_width="120dp"
        android:text="@string/login"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
</RelativeLayout>